added landing_page, bootstrap grid for articles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
@@ -21,7 +22,7 @@
     <%= yield %>
 
     <footer>
-      &copy; 2018 Bike Berlin
+      &copy; 2018 CaesarBlogBerlin
     </footer>
   </body>
 </html>
