--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,19 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
-
-<p>
-  <strong>Header:</strong>
-  <%= @article.header %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @article.body %>
-</p>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-sm-12 col-md-12">
+        <h2><%= @article.title %></h2>
+        <%= @article.created_at.strftime("%B %d %Y, %l:%M%P") %>
+        <h3><%= @article.header %></h3>
+        <p><%= @article.body %></p>
+        <%= link_to "Back", root_path %>
+      </div><!-- /col -->
+  </div>
+</div>
