--- a/app/views/simple_pages/about.html.erb
+++ b/app/views/simple_pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>SimplePages#about</h1>
-<p>Find me in app/views/simple_pages/about.html.erb</p>
+<h1 class="center">About Caesars Blog Berlin</h1>
+<p class="center">My first example blog.</p>
