--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,3 @@
 <p id="notice"><%= notice %></p>
 
-<div class="container-fluid">
-  <div class="row">
-      <div class="col-sm-12 col-md-12">
-        <h2><%= @article.title %></h2>
-        <%= @article.created_at.strftime("%B %d %Y, %l:%M%P") %>
-        <h3><%= @article.header %></h3>
-        <p><%= @article.body %></p>
-        <%= link_to "Back", root_path %>
-      </div><!-- /col -->
-  </div>
-</div>
+<%= render partial: "show" %>
