minor changes application layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     </div><!--end content-->
 
     <footer>
-      &copy; 2018 Caesar'sBlogBerlin
+      &copy; 2018 CaesarBlogBerlin
     </footer>
   </body>
 </html>
