added search form

--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -54,3 +54,15 @@ h2 {
 li p {
   margin: 0;
 }
+
+#q,
+#search-button {
+  margin-top: 0.5em;
+}
+
+@media (max-width: 480px) {
+  #q,
+  #search-button {
+  margin-top: 0.5em;
+  }
+}
