--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -1,2 +1,25 @@
 <h1 class="center">Contact</h1>
-<p class="center">something@something.com</p>
+<%= flash[:notice] %>
+
+<%= form_with(url:"/simple_pages/thank_you", method: "post", local: true) do |form| %>
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+      <div class="form-group">
+        <%= form.label :name, class:"standard-color" %>
+        <%= form.text_field :name, class: "form-control", placeholder: "Enter Name...", required: true %>
+      </div><!-- end form-group -->
+      <div class="form-group">
+        <%= form.label :email, class:"standard-color"  %>
+        <%= form.text_field :email, class: "form-control", placeholder: "Enter Email...", required: true, pattern: '[^@]+@[^@]+\.[a-zA-Z]{2,6}' %>
+      </div><!-- end form-group -->
+      <div class="form-group">
+        <%= form.label :message, class:"standard-color"  %>
+        <%= form.text_area :message, class: "form-control", placeholder: "Enter Message...", rows: 5, required: true %>
+      </div><!-- end form-group -->
+      <div class="form-group">
+        <%= form.submit "Send", class: "form_label" %>
+      </div><!-- end form-group -->
+    </div><!-- end col-md-4 -->
+  </div><!-- end row -->
+<% end %>
