added comments and rating

--- a/app/views/articles/_show.html.erb
+++ b/app/views/articles/_show.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
       <div class="col-sm-12 col-md-12">
         <h2><%= @article.title %></h2>
+        <p>Average Rating: <div class="rated" data-score="<%= @article.average_rating %>"></div> </p>
         <p>Published: <%= @article.created_at.strftime("%B %d %Y, %l:%M%P") %></p>
         <h4><%= @article.header %></h4>
         <p><%= @article.body %></p>
