--- a/app/views/articles/landing_page.html.erb
+++ b/app/views/articles/landing_page.html.erb
@@ -4,3 +4,6 @@
 <h1 class="center">Articles</h1>
 
 <%= render partial: "landing_page" %>
+<div class="center">
+  <%= will_paginate @comments %>
+</div>
