--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,7 @@
         <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li role="presentation"><%= link_to "Home", root_path %></li>
+                <li role="presentation"><%= link_to "Articles", articles_path %></li>
                 <li role="presentation"><%= link_to "About", simple_pages_about_path %></li>
                 <li role="presentation"><%= link_to "Contact", simple_pages_contact_path %></li>
                 <li role="presentation"><%= link_to "User", users_path %></li>
