--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -5,8 +5,8 @@
         <h2 class="underline"><%= article.title %></h2>
         <h3><%= article.header %></h3>
         <p><%= article.body %></p>
-        <%= link_to 'Show', article %>
-        <%= link_to 'Edit', edit_article_path(article) %>
+        <%= link_to 'Show', article %> |
+        <%= link_to 'Edit', edit_article_path(article) %> |
         <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %>
       </div><!-- /col -->
     <% end %>
