--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,6 @@
-<p id="notice"><%= notice %></p>
-
+<%= link_to 'New Article', new_article_path, class: "btn btn-default" %>
 <h1 class="center">Articles</h1>
-
 <%= render partial: "article" %>
-
-
-<%= link_to 'New Article', new_article_path %>
+<div class="center">
+  <%= will_paginate @comments %>
+</div>
