--- a/app/views/articles/_show.html.erb
+++ b/app/views/articles/_show.html.erb
@@ -6,7 +6,7 @@
         <p>Published: <%= @article.created_at.strftime("%B %d %Y, %l:%M%P") %></p>
         <h4><%= @article.header %></h4>
         <p><%= @article.body %></p>
-        <%= link_to root_path do %><p>Back</p><% end %>
+        <%= link_to articles_path do %><p>Back</p><% end %>
       </div><!-- /col -->
   </div>
 </div>
