--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Article</h1>
+<h1 class="center">Editing Article</h1>
 
 <%= render 'form', article: @article %>
 
-<%= link_to 'Show', @article %> |
-<%= link_to 'Back', articles_path %>
+<div class="row">
+  <div class="col-md-4"></div>
+  <div class="col-md-4">
+    <%= link_to 'Show', @article %> |
+    <%= link_to 'Back', articles_path %>
+  </div>
+</div>
