--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,3 @@
-<%= link_to 'New Article', new_article_path, class: "btn btn-default" %>
+<% if signed_in? && current_user.admin? %><%= link_to 'New Article', new_article_path, class: "btn btn-default" %><% end %>
 <h1 class="center">Articles</h1>
 <%= render partial: "article" %>
-<div class="center">
-  <%= will_paginate @comments %>
-</div>
