--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,4 +2,9 @@
 
 <%= render 'form', article: @article %>
 
-<%= link_to 'Back', articles_path %>
+<div class="row">
+  <div class="col-md-4"></div>
+  <div class="col-md-4">
+    <%= link_to 'Back', articles_path %>
+  </div>
+</div>
