--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,5 +2,10 @@
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<div class="row">
+  <div class="col-md-4"></div>
+  <div class="col-md-4">
+    <%= link_to 'Show', @user %> |
+    <%= link_to 'Back', users_path %>
+  </div>
+</div>
