--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
     <div class="col-md-4"></div>
 
     <div class="col-md-4">
-      <%= link_to 'New User', new_user_path, class: "btn btn-default" %></br>
+      <% if signed_in? && current_user.admin? %><%= link_to 'New User', new_user_path, class: "btn btn-default" %></br><% end %>
       <% @users.each do |user| %>
         </br>
         <p><strong>Username:</strong> <%= user.alias_name %></p>
