--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,4 +2,9 @@
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'Back', users_path %>
+<div class="row">
+  <div class="col-md-4"></div>
+  <div class="col-md-4">
+    <%= link_to 'Back', users_path %>
+  </div>
+</div>
